# os-chat

./: .gitignore  README.md  pyproject.toml
src/os_chat/: benchmark.py  main.py  tools.py
tests/: test_os_chat.py  test_tools.py
